# rranch

./: .gitignore  Cargo.toml  Makefile  Readme.md  hirn.path  rranch.toml  test.sol
docs/: completion.md  docs.md
libssh2/: package.bpb
llvm/: package.bpb
pkgbuilds/acl/: package.bpb
pkgbuilds/attr/: package.bpb
pkgbuilds/autoconf/: package.bpb
pkgbuilds/automake/: package.bpb
pkgbuilds/base/: package.bpb
pkgbuilds/bash/: package.bpb
pkgbuilds/bash-profile/: i18n.sh  package.bpb  profile
pkgbuilds/bc/: package.bpb
pkgbuilds/binutils/: package.bpb
pkgbuilds/bison/: package.bpb
pkgbuilds/bzip2/: package.bpb
pkgbuilds/cairo/: package.bpb
pkgbuilds/certificate-ca/: package.bpb
pkgbuilds/check/: package.bpb
pkgbuilds/cmake/: package.bpb
pkgbuilds/coreutils/: package.bpb
pkgbuilds/cpio/: package.bpb
pkgbuilds/crosstools/: package.bpb
pkgbuilds/curl/: package.bpb
pkgbuilds/dbus/: package.bpb
pkgbuilds/dejagnu/: package.bpb
pkgbuilds/desktop-file-utils/: package.bpb
pkgbuilds/dhcp/: package.bpb
pkgbuilds/dhcpcd/: package.bpb
pkgbuilds/diffutils/: package.bpb
pkgbuilds/doas/: doas.bpb
pkgbuilds/docbook-xml/: package.bpb
pkgbuilds/docbook-xsl-nons/: package.bpb
pkgbuilds/duktape/: package.bpb
pkgbuilds/e2fsprogs/: package.bpb
pkgbuilds/expat/: package.bpb
pkgbuilds/expect/: package.bpb
pkgbuilds/file/: package.bpb
pkgbuilds/findutils/: package.bpb
pkgbuilds/flex/: package.bpb
rustc/: package.bpb
src/: main.rs
template/: package.bpb
vim/: package.bpb  shit.bpb
work/: rranch.toml
xz/: package.bpb
(+168 files in other folders)
