[package]
name = "rranch"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
dirs = "4.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
toml = "0.6.0"
